# NLP

./: analitics.ipynb  conda_requirements.txt  data.csv  embedding.py  main.ipynb  pyproject.toml  requirements.txt  scraper.ipynb  script.py  sentiment_analysis.ipynb  sentiment_analysis.py  summarization.py  test.py  tests.ipynb  visualization.py  visualizations.ipynb
.ipynb_checkpoints/: sentiment_analysis-checkpoint.ipynb
data_processing/: __init__.py  data_processing.py
lists/: BillieEilish.csv  IceNineKill.csv  MarilynManson.csv  Slipknot.csv  clear_data.csv  data_without_emoji.csv  result.csv
project/: data.csv  project.ipynb
scraper/: __init__.py  scraper.py
