[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Valery Okhrimenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
transformers = "^4.37.2"
nltk = "^3.8.1"
langdetect = "^1.0.9"
plotly = "^5.19.0"
networkx = "^3.2.1"
jupyter = "^1.0.0"
google-api-python-client = "^2.118.0"
sentence-transformers = "^2.3.1"
torch = {version = "2.2+cu121", source = "torch"}
torchvision = {version = "^0.17.0+cu121", source = "torch"}
torchaudio = {version = "^2.2.0+cu121", source = "torch"}


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
